fix flex direction and z-index navbar for bigger screen

--- a/style.css
+++ b/style.css
@@ -153,6 +153,7 @@
 
   #nav-bar {
     justify-content: space-between;
+    flex-direction: row-reverse;
   }
 
   #nav-bar li {
@@ -197,7 +198,7 @@ header {
   position: -webkit-sticky;
   position: sticky;
   top: 0px;
-  /*z-index: 98;*/
+  z-index: 98;
 }
 
 main {
